Fixed: Code Highlight scroll bar not showing issue.

--- a/styles/docs.css
+++ b/styles/docs.css
@@ -94,6 +94,17 @@
   background-color: #e9eff6 !important;
 }
 
+#codeHighlight::-webkit-scrollbar {
+  width: 4px !important;
+}
+#codeHighlight::-webkit-scrollbar-track {
+  background-color: #7c8da0 !important;
+}
+#codeHighlight::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #e9eff6 !important;
+}
+
 #radix-vue-dialog-content-1::-webkit-scrollbar {
   display: none;
   width: 4px !important;
